# android_memory_read

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/amemory/: maps.h  memory.h  package.h
include/amemory/detail/: base.h  read_file.h
include/amemory/detail/impl/: maps_impl.hpp  type_traits.hpp
include/amemory/detail/mem/: p_readwrite.h  rwbase.h  vm_readwrite.h
include/amemory/detail/mem/pfr/: get_offset.hpp  get_value.hpp  layout_validator.hpp  manager.hpp  max_field_count.hpp
include/amemory/detail/parse/: map_entry.h  parse_base.h  parse_maps.h  parse_status.h
include/amemory/detail/pfr/: for_each.hpp  offset_proxy.hpp  pointer.hpp  value.hpp
include/amemory/detail/search/: async_search.hpp  basic_search.hpp  compare.hpp  memory_splitter.hpp  read_mem.hpp  two_value.hpp
include/amemory/meta/: algorithm_string.hpp  buffer_pool.hpp  memory_t.h  thread_pool.hpp  to_string_view.hpp
script/: adb_run_test.bat
src/: parse_base.cpp  parse_maps.cpp  parse_status.cpp  read_write.cpp  size.cpp  src.cpp
test/: main.cpp
test/pros/: test_maps.cpp  test_read.cpp  test_search.cpp  test_status_parse.cpp  timer.hpp
